# Semester-project-3-Throwbot

./: .gitignore  CMakeLists.txt  Gripper.cpp  Gripper.h  README.md  RobotCalibrationFinal.mlx  Trajectory.cpp  Trajectory.h  UR5pathscript.m  Userconfig.h  Vision.cpp  Vision.h  dataLog.cpp  dataLog.h  goagainmk5.m  linearAlgebra.cpp  linearAlgebra.h  main.cpp  main.m  mainCSV.cpp  matlabComm.cpp  matlabComm.hpp  robotControl.cpp  robotControl.h  throwCalc.m
gripperfolder/: CMakeLists.txt  Gripper.cpp
latexreport/: 00_abstract.tex  01_introduction.tex  02_machinevision.tex  02_theory.tex  03_hardware.tex  03_trajectoryplanning.tex  04_robotcontrol.tex  04_software.tex  05_datacollection.tex  05_evaluation.tex  06_discussion.tex  06_integration.tex  07_conclusion.tex  07_evaluation.tex  08_discussion.tex  08_references.tex  09_conclusion.tex  09_references.tex  10_references.tex  A_taskdistribution.tex  B_code.tex  C_graphs.tex  main.aux  main.out  main.tex  main.toc
matlabTesting/: main.m  simulation.m
resources/: UR5pathscript.m
